update the script command & directory structure

--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "server": "nodemon ./src/server.js",
+    "start": "npm-run-all --parallel dev server",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "cors": "^2.8.5",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "npm-run-all": "^4.1.5"
   }
 }
